--- a/loggin/style.css
+++ b/loggin/style.css
@@ -1,4 +1,8 @@
 body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     background-image: url('../images/background.jpg');
     background-position: fixed;
     background-repeat: no-repeat;
@@ -30,10 +34,29 @@ header {
 
 p input[type="number"] {
     width: 10%;
+    margin-top: 5px;
+    margin-bottom: 5px;
 }
 
 #err {
     text-align: center;
     color: red;
     font-style: bold;
+}
+
+form {
+    background-color: #03b1e64d;
+    /* background-image: url("../images/moroccan-flower-dark.webp"); */
+    color: white;
+    backdrop-filter: blur(40px);
+    -webkit-backdrop-filter: blur(40px);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: fit-content;
+    border: 2px black;
+    border-style: dashed;
+    border-radius: 10px;
+    padding: 10px;
 }
