--- a/style.css
+++ b/style.css
@@ -7,7 +7,8 @@ body {
 
 header {
     text-align: right;
-    background-color: white;
+    background-color: rgb(255, 25, 25);
+    backdrop-filter: 10px;
     padding: 5px;
     border-radius: 25px;
     border: 1px solid black;
