--- a/loggin/style.css
+++ b/loggin/style.css
@@ -32,10 +32,8 @@ header {
     text-align: center;
 }
 
-p input[type="number"] {
-    width: 10%;
-    margin-top: 5px;
-    margin-bottom: 5px;
+p input {
+    width: 100%;
 }
 
 #err {
@@ -46,7 +44,6 @@ p input[type="number"] {
 
 form {
     background-color: #03b1e64d;
-    /* background-image: url("../images/moroccan-flower-dark.webp"); */
     color: white;
     backdrop-filter: blur(40px);
     -webkit-backdrop-filter: blur(40px);
