--- a/loggin/style.css
+++ b/loggin/style.css
@@ -33,6 +33,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding: 15px;
     justify-items: center;
     border-radius: 15px;
     background-color: rgb(5, 179, 179);
